<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="25dp" >

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/parcados" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:onClick="buscarParqueadero"
        android:text="@string/BParqueadero"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirCalculadora"
        android:text="@string/calcularPrecio" />

</LinearLayout>