<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:textColor="#0000FF" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ImplicitViewURL"
        android:onClick="implicitViewURL" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testText" 
        style="@style/blueMono"/>



    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="30dp">
		
            <TextView
	        android:id="@+id/textView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="TextVfdsafdsa
	        fdsa
	        fads
	        fasd
	        fads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        fdsa
	        fads
	        fasd
	        fads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        fsadffdsa
	        fads
	        fasd
	        fads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        fsadffdsa
	        fads
	        fasd
	        fads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        fsadf        asfas
	        fdasiewlatsads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads
	        ads
	        fasd
	        fasd
	        fasdfasd
	        fasdfasdfadsfasdfasdf
	        afdasfadsfas
	        dfadsfasdfas
	        dfasdffdsaf
	        asdfads
	        fasdfads2323" />
    </ScrollView>

</LinearLayout>
